ide50 (64) 2015; urgency=medium

  * remove droplet plugin for the time being
  * add recommended packages help50 >= 1.0.0 and server50 >= 1.0.0
  * remove -Wno-deprecated-declarations from $CFLAGS
  * prepend /opt/cs50/bin to $PATH to enable commands like help50
  * install "C (make)" runner, though the C9 layer ought to do so
  * add our "ubuntu" deb repo to apt/sources.list.d/cs50.list
  * add APPLICATION_ENV variable to shell environment

 -- CS50 <sysadmins@cs50.harvard.edu>  Fri, 19 Aug 2016 00:30:00 -0400

ide50 (63) 2015; urgency=medium

  * remove GDB runner, and rely on system's C (Make) runner using GDB shim

 -- CS50 <sysadmins@cs50.harvard.edu>  Mon, 15 Aug 2016 12:00:00 -0400

ide50 (62) 2015; urgency=medium

  * change recommended version of lib50-c to 7.0.1 or greater

 -- CS50 <sysadmins@cs50.harvard.edu>  Thu, 11 Aug 2016 17:00:00 -0400

ide50 (61) 2015; urgency=medium

  * add debug plugin
  * change library50-c to lib50-c in debian/control

 -- CS50 <sysadmins@cs50.harvard.edu>  Fri, 5 Aug 2016 17:00:00 -0400

ide50 (60) 2015; urgency=medium

  * re-enable profile script loading
  * fix prompt to collapse $HOME as ~
  * add aliases for python and pip to python3 and pip3
  * require python3-pip package to install pip3
  * adjust php var directory to be owned by www-data
  * remove stats50; info50 script bundled with info plugin
  * change CFLAGS to include -Wno-deprecated-declarations
  * add droplet plugin

 -- CS50 <sysadmins@cs50.harvard.edu>  Thu, 4 Aug 2016 10:00:00 -0400

ide50 (59) 2015; urgency=medium

  * temporarily disable loading of profile scripts

 -- CS50 <sysadmins@cs50.harvard.edu>  Fri, 22 Jul 2016 17:00:00 -0400

ide50 (58) 2015; urgency=medium

  * fix ~ in terminal title, and improved support for first open terminal
  * `cd` by itself now changes dir to ~/worksapce, `cd ~` changes to home dir
  * run apache as www-data instead of ubuntu user
  * fix apache50 to support directories with spaces