@@ -1,2 +1,0 @@
-deb http://mirror.cs50.net/ide50/2015/dists/trusty/main/binary-amd64/ /
-deb http://mirror.cs50.net/ubuntu/dists/trusty/main/binary-amd64/ /
